--- a/CGE_basedata.ipynb
+++ b/CGE_basedata.ipynb
@@ -1330,8 +1330,13 @@
     "# A tax weight factor is therefore assigned, giving households a weight factor of 3, and all other\n",
     "# users a weight factor of 1\n",
     "\n",
-    "TAXFAC = pd.DataFrame(1.0, index = userList, columns = [\"TAXFAC\"]).sort_index()\n",
-    "TAXFAC.loc[\"P3_S14\"] = 3.0\n",
+    "#TAXFAC = pd.DataFrame(1.0, index = userList, columns = [\"TAXFAC\"]).sort_index()\n",
+    "#TAXFAC.loc[\"P3_S14\"] = 3.0\n",
+    "\n",
+    "TAXFAC = pd.DataFrame(1.0, index = userList, columns = [\"TAXFAC\"])\n",
+    "TAXFAC = pd.DataFrame(ioData[\"Use table at basic prices\"][TAXFAC.index.values].loc[\"D21N\"]/ioData[\"Use table at basic prices\"][TAXFAC.index.values].loc[\"FIMUSE_OH\"], columns=[\"TAXFAC\"]).fillna(0)\n",
+    "\n",
+    "\n",
     "WTOT =   cleanData[\"usetable_PP\"].loc[COM].T.multiply(TAXFAC[\"TAXFAC\"], axis=\"index\").sum()"
    ]
   },
@@ -1360,6 +1365,32 @@
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-55-c34cc1c3d5de>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mrow_mar\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcleanData\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"supplytable_BP\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"D21N\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mbal_VTAX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mipfn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mVTAX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mrow_mar\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcol_mar\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'module' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "from ipfn import *\n",
+    "\n",
+    "col_mar = ioData[\"Use table at basic prices\"][TAXFAC.index.values].loc[\"D21N\"]\n",
+    "row_mar = cleanData[\"supplytable_BP\"][\"D21N\"]\n",
+    "\n",
+    "bal_VTAX = ipfn(VTAX, [row_mar, col_mar], [[0],[1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "metadata": {},
    "outputs": [],
    "source": [
     "taxDict = {}\n",
@@ -1373,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1427,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1455,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1477,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1546,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1576,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1594,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1629,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1647,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1662,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1728,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1749,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1777,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -1867,7 +1898,7 @@
        "I_61      4295.004   4294.999       0.005"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1878,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1906,16 +1937,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For C_37_39 V6BAS is adjusted by 0.005000000000109139\n",
       "For C_49 V6BAS is adjusted by 0.0059999999994033715\n",
-      "For C_77 V6BAS is adjusted by 0.006999999998697604\n"
+      "For C_77 V6BAS is adjusted by 0.006999999999607098\n"
      ]
     }
    ],
@@ -1939,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1948,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1959,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1979,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1997,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2017,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2031,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2087,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2097,9 +2127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 353,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'C_97_98'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-353-5d2e78621b2a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mhwf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata2har\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mallDims\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriteToDisk\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mharFolder\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"/basedata64.har\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Pellervon Taloustutkimus PTT ry\\KT_S Alueellinen tilinpito - Documents\\General\\koodi\\alta\\harWriterFunction.py\u001b[0m in \u001b[0;36mdata2har\u001b[1;34m(data, allDims)\u001b[0m\n\u001b[0;32m     58\u001b[0m                 \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 60\u001b[1;33m                 \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     61\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m             \u001b[0msets\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'C_97_98'"
+     ]
+    }
+   ],
    "source": [
     "hwf.data2har(output, allDims).writeToDisk(harFolder+\"/basedata64.har\")"
    ]
@@ -2120,7 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2133,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2154,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2185,7 +2228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2214,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2233,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2259,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2275,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
