--- a/CGE_basedata.ipynb
+++ b/CGE_basedata.ipynb
@@ -1365,31 +1365,19 @@
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-55-c34cc1c3d5de>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mrow_mar\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcleanData\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"supplytable_BP\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"D21N\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mbal_VTAX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mipfn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mVTAX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mrow_mar\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcol_mar\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'module' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from ipfn import *\n",
+    "#from ipfn import *\n",
     "\n",
-    "col_mar = ioData[\"Use table at basic prices\"][TAXFAC.index.values].loc[\"D21N\"]\n",
-    "row_mar = cleanData[\"supplytable_BP\"][\"D21N\"]\n",
+    "#col_mar = ioData[\"Use table at basic prices\"][TAXFAC.index.values].loc[\"D21N\"]\n",
+    "#row_mar = cleanData[\"supplytable_BP\"][\"D21N\"]\n",
     "\n",
-    "bal_VTAX = ipfn(VTAX, [row_mar, col_mar], [[0],[1]])"
+    "#bal_VTAX = ipfn(VTAX, [row_mar, col_mar], [[0],[1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1472,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1486,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1508,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1577,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1644,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1678,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1727,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1759,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1780,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1808,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1898,7 +1886,7 @@
        "I_61      4295.004   4294.999       0.005"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1909,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1937,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1969,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1978,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1989,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2009,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2027,7 +2015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2047,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2061,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2117,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2127,9 +2115,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "V1CAP\n",
+      "V1LND\n",
+      "V1LAB\n",
+      "MAKE\n",
+      "V1PTX\n",
+      "V0TAR\n",
+      "V1OCT\n",
+      "V1BAS\n",
+      "V2BAS\n",
+      "V3BAS\n",
+      "V4BAS\n",
+      "V4BASimp\n",
+      "V5BAS\n",
+      "V6BAS\n",
+      "V1TAX\n",
+      "V2TAX\n",
+      "V3TAX\n",
+      "V4TAX\n",
+      "V5TAX\n",
+      "V6TAX\n",
+      "V1MAR\n",
+      "V2MAR\n",
+      "V3MAR\n",
+      "V4MAR\n",
+      "V5MAR\n",
+      "SIGMA1\n"
+     ]
+    },
     {
      "ename": "ValueError",
      "evalue": "could not convert string to float: 'C_97_98'",
@@ -2137,8 +2157,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-353-5d2e78621b2a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mhwf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata2har\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mallDims\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriteToDisk\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mharFolder\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"/basedata64.har\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Pellervon Taloustutkimus PTT ry\\KT_S Alueellinen tilinpito - Documents\\General\\koodi\\alta\\harWriterFunction.py\u001b[0m in \u001b[0;36mdata2har\u001b[1;34m(data, allDims)\u001b[0m\n\u001b[0;32m     58\u001b[0m                 \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 60\u001b[1;33m                 \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     61\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m             \u001b[0msets\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-88-5d2e78621b2a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mhwf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata2har\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mallDims\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriteToDisk\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mharFolder\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"/basedata64.har\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Pellervon Taloustutkimus PTT ry\\KT_S Alueellinen tilinpito - Documents\\General\\koodi\\alta\\harWriterFunction.py\u001b[0m in \u001b[0;36mdata2har\u001b[1;34m(data, allDims)\u001b[0m\n\u001b[0;32m     60\u001b[0m                 \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     61\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 62\u001b[1;33m                 \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     63\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m             \u001b[0msets\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'C_97_98'"
      ]
     }
