--- a/CGE_basedata.ipynb
+++ b/CGE_basedata.ipynb
@@ -1324,15 +1324,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TAXBYCOM  = pd.DataFrame(cleanData[\"supplytable_BP\"][\"D21N\"].copy())\n",
-    "\n",
+    "TAXBYCOM = pd.DataFrame(cleanData[\"supplytable_BP\"][\"D21N\"].copy())\n",
     "# Following Roos et al. (2015), it is supposed that households pay most of the tax burden.\n",
     "# A tax weight factor is therefore assigned, giving households a weight factor of 3, and all other\n",
     "# users a weight factor of 1\n",
-    "\n",
-    "TAXFAC = pd.DataFrame(1.0, index = userList, columns = [\"TAXFAC\"]).sort_index()\n",
-    "TAXFAC.loc[\"P3_S14\"] = 3.0\n",
-    "WTOT =   cleanData[\"usetable_PP\"].loc[COM].T.multiply(TAXFAC[\"TAXFAC\"], axis=\"index\").sum()"
+    "#TAXFAC = pd.DataFrame(1.0, index = userList, columns = [\"TAXFAC\"]).sort_index()\n",
+    "#TAXFAC.loc[\"P3_S14\"] = 3.0\n",
+    "TAXFAC = pd.DataFrame(1.0, index = userList, columns = [\"TAXFAC\"])\n",
+    "TAXFAC = pd.DataFrame(ioData[\"Use table at basic prices\"][TAXFAC.index.values].loc[\"D21N\"]/ioData[\"Use table at basic prices\"][TAXFAC.index.values].loc[\"FIMUSE_OH\"], columns=[\"TAXFAC\"]).fillna(0)\n",
+    "WTOT = cleanData[\"usetable_PP\"].loc[COM].T.multiply(TAXFAC[\"TAXFAC\"], axis=\"index\").sum()"
    ]
   },
   {
@@ -1913,9 +1913,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For C_37_39 V6BAS is adjusted by 0.005000000000109139\n",
       "For C_49 V6BAS is adjusted by 0.0059999999994033715\n",
-      "For C_77 V6BAS is adjusted by 0.006999999998697604\n"
+      "For C_77 V6BAS is adjusted by 0.006999999999607098\n"
      ]
     }
    ],
@@ -1954,7 +1953,7 @@
    "source": [
     "paramDict = {}\n",
     "for sheet in paramSheets:\n",
-    "    paramDict[sheet] = pd.read_excel(\"supplementaryData/PARAMETERS64.xlsx\", sheet_name = sheet)"
+    "    paramDict[sheet] = pd.read_excel(\"supplementaryData/PARAMETERS64.xlsx\", sheet_name = sheet, index_col = 0)"
    ]
   },
   {
@@ -2154,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2185,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2214,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2233,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2259,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2275,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
