--- a/CGE_capital_dynamics.ipynb
+++ b/CGE_capital_dynamics.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        " 'I_97_98'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,22 +500,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OK for Capital formation 2017_prices\n",
-      "OK for Capital formation CP\n",
-      "OK for Capital formation FP_2010\n",
       "OK for Capital formation FP_prev_yr\n",
-      "OK for Consumption and retirement CP\n",
+      "OK for Capital formation 2017_prices\n",
+      "OK for Capital formation FP_2010\n",
+      "OK for Capital formation CP\n",
       "OK for Consumption and retirement FP_2010\n",
-      "OK for Production accounts CP\n",
+      "OK for Consumption and retirement CP\n",
+      "OK for Production accounts FP_prev_yr\n",
       "OK for Production accounts FP_2010\n",
-      "OK for Production accounts FP_prev_yr\n"
+      "OK for Production accounts CP\n"
      ]
     }
    ],
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
        "True"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
        " 'CPI 1972=100 Point figure']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1580,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1615,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
        "True"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1711,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1790,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1807,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1894,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1964,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1974,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1987,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
