--- a/CGE_regional_extension.ipynb
+++ b/CGE_regional_extension.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "True"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
     "PO01 = regPop[str(baseYear)].to_frame(name = \"RPOP\")\n",
     "\n",
     "# Shortest distance from r to d:\n",
-    "DIST = pd.read_excel(\"supplementaryData/regDistances.xlsx\")\n",
+    "DIST = pd.read_excel(\"supplementaryData/regDistances.xlsx\", index_col = 0)\n",
     "\n",
     "# Distance factor for gravity formula\n",
     "DFAC = pd.DataFrame(1.0, index = regCom, columns = [\"dom\", \"imp\"])\n",
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,25 +702,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# END OF PROGRAM"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
